<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/default_pad">
            <ImageView
                android:id="@+id/file_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/logo"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">
                <TextView
                    android:id="@+id/file_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/permission_dp_5"
                    android:gravity="left|center_vertical"
                    android:textSize="@dimen/filename_item_text_size"
                    android:textColor="@color/gray_8f"
                    android:lines="1"
                    android:text="@string/app_name"
                    android:ellipsize="end" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="2dp"
                    android:paddingRight="@dimen/default_pad">
                    <TextView
                        android:id="@+id/remaining_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:textColor="@color/gray_8f"
                        android:paddingLeft="@dimen/default_pad2"/>
                    <ProgressBar
                        android:id="@+id/custom_progressbar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:paddingLeft="@dimen/default_pad2"
                        android:progressDrawable="@drawable/style_down_progress"
                        android:max="100"
                        android:progress="80" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/down_size"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/default_pad2"
                            android:textColor="@color/gray_8f"
                            android:textSize="@dimen/file_item_text_size"
                            android:text="@string/down_count"/>

                        <TextView
                            android:id="@+id/down_speed"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/default_pad2"
                            android:gravity="center"
                            android:textColor="@color/gray_8f"
                            android:textSize="@dimen/file_item_text_size"
                            android:text="@string/down_speed"/>

                        <TextView
                            android:id="@+id/down_cdnspeed"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="@dimen/default_pad2"
                            android:text="@string/down_speed_up"
                            android:textColor="@color/gray_8f"
                            android:textSize="@dimen/file_item_text_size"
                            android:visibility="gone" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>